--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
+@import url('https://fonts.cdnfonts.com/css/pokemon-hollow');
+
+body {
+  font-family: sans-serif;
+  font-weight: 100;
+  color: #e4e4e4;
+  background-color: #1d1f2b;
+}
